==> arduino/Arduino/hardware/arduino/xmega/libraries/SPI/SPI.cpp <==
/*
 * Copyright (c) 2010 by Cristian Maglie <c.maglie@bug.st>
 * SPI Master library for arduino.
 *
 * This file is free software; you can redistribute it and/or modify
 * it under the terms of either the GNU General Public License version 2
 * or the GNU Lesser General Public License version 2.1, both as
 * published by the Free Software Foundation.
 */

#include "pins_arduino.h"
#include "SPI.h"

SPIClass SPI;

/* 
 * Constructor and other mods by Pat Deegan (http://flyingcarsandstuff.com/),
 * November 2014, to allow for multiple SPI ports and remove hard-coded values
 * for MISO/MOSI/SCK etc.  
 * See SPI.h for details and usage.
 */
SPIClass::SPIClass() : spi_settings()
{
}

SPIClass::SPIClass(const SPIPortSettings & init) : spi_settings(init)
{
}

void SPIClass::begin() {
  // Set SS to high so a connected chip will be "deselected" by default
  digitalWrite(spi_settings.ss, HIGH);

  // When the SS pin is set as OUTPUT, it can be used as
  // a general purpose output port (it doesn't influence
  // SPI operations).
  pinMode(spi_settings.ss, OUTPUT);

  // Warning: if the SS pin ever becomes a LOW INPUT then SPI
  // automatically switches to Slave, so the data direction of
  // the SS pin MUST be kept as OUTPUT.
  SPI_INTERNAL_PCTRL |= _BV(MSTR);
  SPI_INTERNAL_PCTRL |= _BV(SPE);

  // Set direction register for SCK and MOSI pin.
  // MISO pin automatically overrides to INPUT.
  // By doing this AFTER enabling SPI, we avoid accidentally
  // clocking in a single bit since the lines go directly
  // from "input" to SPI control.  
  // http://code.google.com/p/arduino/issues/detail?id=888
  pinMode(spi_settings.clk, OUTPUT);
  pinMode(spi_settings.mosi, OUTPUT);
}


void SPIClass::end() {
  SPI_INTERNAL_PCTRL &= ~_BV(SPE);
}

void SPIClass::setBitOrder(uint8_t bitOrder)
{
  if(bitOrder == LSBFIRST) {
    SPI_INTERNAL_PCTRL |= _BV(DORD);
  } else {
    SPI_INTERNAL_PCTRL &= ~(_BV(DORD));
  }
}

void SPIClass::setDataMode(uint8_t mode)
{
  SPI_INTERNAL_PCTRL = (SPI_INTERNAL_PCTRL & ~SPI_MODE_MASK) | mode;
}

void SPIClass::setClockDivider(uint8_t rate)
{
#if defined(__AVR_XMEGA__)
  SPI_INTERNAL_PCTRL = (SPI_INTERNAL_PCTRL & ~(SPI_CLOCK_MASK | SPI_2XCLOCK_MASK)) | (rate & (SPI_CLOCK_MASK | SPI_2XCLOCK_MASK));
#else
  SPI_INTERNAL_PCTRL = (SPI_INTERNAL_PCTRL & ~SPI_CLOCK_MASK) | (rate & SPI_CLOCK_MASK);
  SPI_INTERNAL_PSTATUS = (SPI_INTERNAL_PSTATUS & ~SPI_2XCLOCK_MASK) | ((rate >> 2) & SPI_2XCLOCK_MASK);
#endif
}
